# Language-for-2D-graphics

./: Function.py  FunctionParserListener.py  GlobalContext.py  Grammar.txt  LICENSE  MyFirstPassTwoDimParserListener.py  MySecondPassTwoDimParserListener.py  README.md  TwoDimLexer.g4  TwoDimLexer.interp  TwoDimLexer.py  TwoDimLexer.tokens  TwoDimParser.g4  TwoDimParser.interp  TwoDimParser.py  TwoDimParserBase.py  TwoDimParserListener.py  TwoDimParserVisitor.py  VariablesTree.py  drawing.py  example.code  exceptions.py  graph.py  main.py  setup.cfg  setup.py
.antlr/: TwoDimLexer.interp  TwoDimLexer.java  TwoDimLexer.tokens  TwoDimParser.interp  TwoDimParser.java  TwoDimParser.tokens
example_code/: 2d_relations.code  ERROR_cyclic_relation.code  ERROR_syntax_errors.code  assign_declaration.code  at_vertical.code  atx.code  chain_relations.code  chess_board.code  chessboard.code  color.code  example.code  horizontal_relations.code  random_flag.code  scope.code  stair.code  vertical_relations.code  website.code
twodim_compiler/: Function.py  FunctionParserListener.py  GlobalContext.py  MyFirstPassTwoDimParserListener.py  MySecondPassTwoDimParserListener.py  TwoDimLexer.interp  TwoDimLexer.py  TwoDimParser.interp  TwoDimParser.py  TwoDimParser.tokens  TwoDimParserBase.py  TwoDimParserListener.py  TwoDimParserVisitor.py  VariablesTree.py  drawing.py  exceptions.py  graph.py  main.py
twodim_grammar/: TwoDimLexer.g4  TwoDimParser.g4
