[metadata]
name='Language-for-2D-graphics'
version='1.1'
packages=['twodim_compiler']
url='https://github.com/jivnov/Language-for-2D-graphics',description='A language for creating 2D graphics using relational operations, implemented for Compilers course at AGH UST.'
install_requires=[
        "antlr4-python3-runtime>=4.9.2",
        "writesvg",
        "enum"
    ],
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
